# Devkit-Zero

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
assets/: README.md
devkit_zero/: __init__.py  __version__.py  cli.py  core.py  gui_main.py
devkit_zero/tools/: __init__.py  batch_process.py  converter.py  diff_tool.py  formatter.py  linter.py  markdown_preview.py  port_checker.py  random_gen.py  regex_tester.py
devkit_zero/ui/: __init__.py  gui_app.py
devkit_zero/utils/: README.md  __init__.py
docs/: README.md
docs/development/: DEVELOPMENT.md  FINAL_STATUS_REPORT.md  PROJECT_FRAMEWORK.md  PROJECT_SUMMARY.md
docs/reference/: QUICK_REFERENCE.md
docs/team/: BEGINNER_GUIDE.md  TEAM_GUIDELINES.md
static/: README.md
templates/: README.md
tests/: conftest.py
tests/test_tools/: test_formatter.py  test_random_gen.py
